--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="post">
+<body>
     {% include header.html %}
 
     <div class="container body">
