--- a/sass/style.scss
+++ b/sass/style.scss
@@ -120,7 +120,7 @@ header {
         @include transition(background 0.3s linear);
 
         &:hover {
-            background-image: url(/img/logo2.png);
+            background-image: url(/img/logo2bis.png);
             border-bottom: none;
 
             &:before {
