--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@
 
             {% if page.comments %}
                 {% include disqus.html %}
-            {% %}
+            {% endif %}
         </div>
     </div>
     
