--- a/sass/_prettify.scss
+++ b/sass/_prettify.scss
@@ -8,8 +8,8 @@
 .pln { color: #48484c; }
 
 .prettyprint {
-    background-color: #f7f7f9;
-    border: 1px solid #e1e1e8;
+    background-color: #f7f7f9 !important;
+    border: 1px solid #e1e1e8 !important;
     -webkit-border-radius: 2px;
        -moz-border-radius: 2px;
             border-radius: 2px;
