--- a/sass/style.scss
+++ b/sass/style.scss
@@ -422,6 +422,22 @@ section {
     }
 }
 
+.demo-download {
+    margin: 0;
+    padding: 0;
+    
+    @include row("table");
+
+    text-align: center;
+
+    li {
+        display: inline-block;
+    }
+    li:first-child {
+        margin-right: 1em;
+    }
+}
+
 footer {
     @include row("table");
     border-top: 4px solid #d8d8d8;
@@ -509,6 +525,13 @@ footer {
         @include box-shadow(0px 1px 0.2em 0px rgba(0, 0, 0, 0.3) inset);
         color: #fff;
     }
+     a {
+        color: white;
+
+        &:hover {
+            border-bottom: none;
+        }
+    }
     
 }
 
@@ -560,15 +583,21 @@ footer {
     .active {
         display: inline-block;
     }
-    .btn {
-        a {
-            color: white;
+}
+code {
+    background-color: #f7f7f9;
+    border: 1px solid #e1e1e8;
+    border-radius: 2px;
+    color: #d14;
+    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+    font-size: 12px;
+    padding: 2px 4px;
+    white-space: nowrap;
+}
 
-            &:hover {
-                border-bottom: none;
-            }
-        }
-    }
+pre code {
+    background: none;
+    border: none;
 }
 
 blockquote {
