--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@
             {% endif %}
 
             {% if page.note %}
-                <div class="alert">
+                <div class="callout callout-warning">
                     {{page.note}}
                 </div>
             {% endif %}
