--- a/sass/style.scss
+++ b/sass/style.scss
@@ -228,6 +228,21 @@ header {
     }
 }
 
+.demo-download {
+    margin: 0;
+    padding: 0;
+    
+    @include row("table");
+
+    text-align: center;
+
+    li {
+        display: inline-block;
+    }
+    li:first-child {
+        margin-right: 1em;
+    }
+}
 
 .body {
     margin-top: 10px;
@@ -422,21 +437,6 @@ section {
     }
 }
 
-.demo-download {
-    margin: 0;
-    padding: 0;
-    
-    @include row("table");
-
-    text-align: center;
-
-    li {
-        display: inline-block;
-    }
-    li:first-child {
-        margin-right: 1em;
-    }
-}
 
 footer {
     @include row("table");
@@ -466,6 +466,70 @@ footer {
             }
         }
     }
+}
+
+form {
+    ul {
+        padding-left: 0;
+
+        li {
+            list-style: none;
+            margin-bottom: 24px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+}
+
+label {
+    color: #656d78;
+    display: inline-block;
+    font-weight: 500;
+    margin-bottom: 7px;
+}
+
+input, textarea {
+    font-family: Lato, 'PT Sans', sans-serif;
+    font-weight: 300;
+    font-size: 1em;
+
+     &:focus {
+        outline: 0;
+    }   
+}
+
+input:not([type="submit"]), textarea {
+    border: 1px solid #e6e9ed;
+    border-radius: 4px;
+    color: $lightGrey;
+    height: 40px;
+    padding: 0 12px;
+    width: 50%;
+    @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075));
+    @include transition(border-color 0.2s linear, box-shadow linear 0.2s);
+
+    &:hover {
+        border-color: $blue;
+    }
+
+    &:focus {
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba($blue, 0.6);
+    }
+}
+textarea {
+    height: 192px;
+    padding: 12px;
+    width: 80%;
+}
+
+input[type="submit"] {
+    width: auto;
+}
+
+.hide {
+    display: none;
 }
 
 .alert {
