--- a/sass/style.scss
+++ b/sass/style.scss
@@ -506,7 +506,8 @@ input:not([type="submit"]), textarea {
     color: $lightGrey;
     height: 40px;
     padding: 0 12px;
-    width: 50%;
+    max-width: 450px;
+    width: 100%;
     @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075));
     @include transition(border-color 0.2s linear, box-shadow linear 0.2s);
 
@@ -522,7 +523,7 @@ input:not([type="submit"]), textarea {
 textarea {
     height: 192px;
     padding: 12px;
-    width: 80%;
+    max-width: 768px;
 }
 
 input[type="submit"] {
