--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,11 @@
 <footer>
     <div class="container">
         <p>2012 - {{ site.time | date: '%Y' }} &copy; Pierre Baron</p>
-        <p>
-            <a href="/credits/">Credits</a>
-        </p>
+        <ul class="socials">
+            <li><a href="mailto:prbaron22@gmail.com"><i class="icon-envelope-alt"></i></a></li>
+            <li><a href="skype:prbaron"><i class="icon-skype"></i></a></li>
+            <li><a href="https://twitter.com/prbaron"><i class="icon-twitter"></i></a></li>
+            <li><a href="https://github.com/prbaron"><i class="icon-github"></i></a></li>
+        </ul>
     </div>
 </footer>
