--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,8 @@
 <header>
     <div class="container">
-        <div class="grid">
+        <div class="grid12">
             <a class="logo">pierrebaron.fr</a>
-            <ul class="socials">
-                <li><a href="mailto:prbaron22@gmail.com"><i class="icon-envelope-alt"></i></a></li>
-                <li><a href="skype:prbaron"><i class="icon-skype"></i></a></li>
-                <li><a href="https://twitter.com/prbaron"><i class="icon-twitter"></i></a></li>
-                <li><a href="https://github.com/prbaron"><i class="icon-github"></i></a></li>
-            </ul>
-            
-            <nav>
+            <nav class="nav nav-menu">
         	    <ul>
         	    {% for link in site.navigation %}
                     {% assign current = nil %}
@@ -19,7 +12,7 @@
                         {% endif %}
                         <li class="{{current}}"><a href="{{ link.url }}">{{ link.text }}</a></li>
                     {% endfor %}
-            	</ul>
+                </ul>
             </nav>
         </div>
     </div>
