--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,14 +25,17 @@
             </ul>
             
             {% if page.demo || page.download %}
-                <ul class="unstyled demo-download">
+            <div class="actions">
+                <ul>
                     {% if page.demo %}
-                        <li><a href="{{page.demo}}" class="btn">Démonstration</a></li>
+                        <li><a href="{{page.demo}}" class="btn btn-primary">Démonstration</a></li>
                     {% endif %}
                     {% if page.download %}
-                        <li><a href="{{page.download}}" class="btn">Sources</a></li>
+                        <li><a href="{{page.download}}" class="btn btn-default">Sources</a></li>
                     {% endif %}
                 </ul>
+            </div>
+
             {% endif %}
 
             {% if page.note %}
@@ -43,15 +46,15 @@
             
             {{ content }}
             
-            <ul class="pagination">
-                {% if page.next %}
-                    <li class="next"><a href=" {{ page.next.url }}"><i class="icon-chevron-sign-left"></i> &nbsp;&nbsp; {{ page.next.tagline }}</a></li>
-                {% endif %} 
-                
-                {% if page.previous %}
-                    <li class="prev"><a href=" {{ page.previous.url }}">{{ page.previous.tagline }} &nbsp;&nbsp;<i class="icon-chevron-sign-right"></i></a></li>
-                {% endif %}
-            </ul>
+            <!--<ul class="pagination">-->
+                <!--{% if page.next %}-->
+                    <!--<li class="next"><a href=" {{ page.next.url }}"><i class="icon-chevron-sign-left"></i> &nbsp;&nbsp; {{ page.next.tagline }}</a></li>-->
+                <!--{% endif %} -->
+                <!---->
+                <!--{% if page.previous %}-->
+                    <!--<li class="prev"><a href=" {{ page.previous.url }}">{{ page.previous.tagline }} &nbsp;&nbsp;<i class="icon-chevron-sign-right"></i></a></li>-->
+                <!--{% endif %}-->
+            <!--</ul>-->
 
 
             {% if page.comments %}
