--- a/sass/_prettify.scss
+++ b/sass/_prettify.scss
@@ -1,41 +1,82 @@
-.com { color: #93a1a1; }
-.lit { color: #195f91; }
-.pun, .opn, .clo { color: #93a1a1; }
-.fun { color: #dc322f; }
-.str, .atv { color: #D14; }
-.kwd, .linenums .tag { color: #1e347b; }
-.typ, .atn, .dec, .var { color: teal; }
-.pln { color: #48484c; }
-
 .prettyprint {
-    background-color: #f7f7f9 !important;
-    border: 1px solid #e1e1e8 !important;
-    -webkit-border-radius: 2px;
-       -moz-border-radius: 2px;
-            border-radius: 2px;
-    font-size: 0.9em;
-    overflow: auto;
-    padding: 8px;
-    
+    background-color : $white !important;
+    border           : 1px solid darken($lightGray, 3%) !important;
+    border-radius    : 2px;
+    font-family      : Monaco, Menlo, Consolas, "Courier New", monospace;
+    font-size        : 0.8em;
+    line-height      : 1.25em;
+    overflow         : auto;
+    padding          : 8px;
+    white-space      : pre-wrap;
+
     code {
-        white-space: pre-wrap;
+        white-space : pre-wrap;
     }
-    
+
     &.linenums {
-      -webkit-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
-         -moz-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
-              box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+        @include box-shadow(inset 40px 0 0 #fafbfc, inset 41px 0 0 darken($lightGray, 3%));
     }
     /* Specify class=linenums on a pre to get line numbering */
     ol.linenums {
-        margin: 0 0 0 33px; /* IE indents via margin-left */
-        padding-left: 0px;
-        
+        margin       : 0 0 0 38px; /* IE indents via margin-left */
+        padding-left : 0px;
+
         li {
-            padding-left: 12px;
-            color: #bebec5;
-            line-height: 18px;
-            text-shadow: 0 1px 0 #fff;
+            padding-left : 7px;
+            color        : $mediumGray-hover;
+            line-height  : 18px;
+            text-shadow  : 0 1px 0 #fff;
         }
-    } 
+    }
+}
+
+.pln {
+    color : $darkGray-hover;
+}
+
+.str {
+    color : $grass-hover;
+}
+
+.kwd {
+    color : $violet;
+}
+
+.com {
+    color : $mediumGray-hover;
+}
+
+.typ {
+    color : $jeans;
+}
+
+.lit,
+.atn {
+    color : $yellow;
+}
+
+.pun,
+.opn,
+.clo {
+    color : $darkGray;
+}
+
+.tag {
+    color : $red;
+}
+
+.atv {
+    color : $green;
+}
+
+.dec {
+    color : $yellow-hover;
+}
+
+.var {
+    color : $red-hover;
+}
+
+.fun {
+    color : $jeans-hover;
 }
