--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
-@import "variables";
+@import "variables", "pygments";
 @import "bourbon/bourbon", "neat/neat";
-@import "font-awesome.min", "prettify";
+@import "font-awesome.min";
 
 @include font-face(Mir-Medium, '/font/mir-medium_regular', normal);
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Kreon:700|Droid+Serif:700italic);
@@ -434,6 +434,13 @@ footer {
         float  : right;
         margin : 55px 0 0 0;
 
+        @include media(max-width $tablet) {
+            @include row("table");
+            float        : none;
+            padding-left : 0;
+            margin : 55px 0;
+        }
+
         li {
             float        : left;
             list-style   : none;
@@ -697,37 +704,44 @@ input[type="submit"] {
     }
 }
 
-pre {
-    background-color : #f5f5f5;
-    border           : 1px solid rgba(0, 0, 0, 0.15);
-    border-radius    : 4px;
-    display          : block;
-    font-size        : 13px;
-    line-height      : 20px;
-    margin           : 0 0 10px;
-    padding          : 9.5px;
-    white-space      : pre-wrap;
-    word-break       : break-all;
-    word-wrap        : break-word;
-}
-
-pre code {
-    background-color : transparent;
-    border           : none;
-    color            : inherit;
-    padding          : 0;
-    white-space      : pre-wrap;
-}
-
+/* solo code */
 code {
-    background-color : #f7f7f9;
-    border           : 1px solid #e1e1e8;
+    background-color : #fafbfc;
+    border           : 1px solid darken($lightGray, 3%);
     border-radius    : 2px;
-    color            : #d14;
+    color            : $red;
+    display          : inline-block;
     font-family      : Monaco, Menlo, Consolas, "Courier New", monospace;
     font-size        : 12px;
     padding          : 2px 4px;
     white-space      : nowrap;
+}
+
+pre {
+    background-color : $white;
+    border           : 1px solid darken($lightGray, 3%);
+    border-radius    : 2px;
+    color            : $darkGray;
+    display          : block;
+    font-family      : Monaco, Menlo, Consolas, "Courier New", monospace;
+    font-size        : 13px;
+    line-height      : 20px;
+    margin           : 0 0 10px;
+    overflow-x       : auto;
+    overflow-y       : hidden;
+    padding          : 8px;
+    white-space      : pre;
+    word-spacing     : normal;
+    word-break       : normal;
+
+    code {
+        background-color : transparent;
+        border           : none;
+        color            : inherit;
+        padding          : 0;
+        font-size        : inherit;
+        white-space      : pre;
+    }
 }
 
 blockquote {
