--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-@import "variables", "pygments";
+@import "mixins", "variables", "pygments";
 @import "bourbon/bourbon", "neat/neat";
 @import "font-awesome.min";
 
@@ -767,6 +767,6 @@ kbd {
     border-radius    : 2px;
     box-shadow       : inset 0 -1px 0 rgba(0, 0, 0, .25);
     color            : $lightGray;
-    font-size        : 0.9em;
-    padding          : 4px;
+    font-size        : 0.8em;
+    padding          : 2px 4px;
 }
