amélioration style line numbers

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,7 @@
         // removes line numbers from Highlight tag in Jekyll;
         var lines = document.getElementsByClassName('lineno');
         for(var i=0; i<lines.length; i++) {
-            lines[i].innerHTML = "&nbsp;";
+            lines[i].innerHTML = "";
         }
     </script>
 </body>
