--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <title>PB | {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Pierre Baron">
-    <meta name="keyword" content="Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery, {{page.keywords}}">
+    <meta name="keyword" content="Pierre Baron, prbaron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, {{page.keywords}}">
 
     <link rel="shortcut icon" href="/img/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="/img/favicon.png">
