première intégration de SOLID. (wip)

--- a/_less/variables.less
+++ b/_less/variables.less
@@ -329,10 +329,10 @@
 @pagination-bg: @brand-primary;
 @pagination-border: @brand-primary;
 @pagination-hover-color: #fff;
-@pagination-hover-bg: @link-hover;
+@pagination-hover-bg: @link-color;
 @pagination-hover-border: transparent;
 @pagination-active-color: #fff;
-@pagination-active-bg: @link-hover;
+@pagination-active-bg: @link-color;
 @pagination-active-border: transparent;
 @pagination-disabled-color: @gray-lighter;
 @pagination-disabled-bg: lighten(@brand-success, 15%);
