--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,3 +9,41 @@
         </ul>
     </div>
 </footer>
+
+<div id="footerwrap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <h4>A propos</h4>
+
+                <div class="hline-w"></div>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s.</p>
+            </div>
+            <div class="col-lg-4">
+                <h4>Socialisons nous</h4>
+
+                <div class="hline-w"></div>
+                <p>
+                    <a href="mailto:prbaron22@gmail.com"><i class="fa fa-envelope-o"></i></a>
+                    <a href="skype:prbaron"><i class="fa fa-skype"></i></a>
+                    <a href="https://twitter.com/prbaron"><i class="fa fa-twitter"></i></a>
+                    <a href="https://github.com/prbaron"><i class="fa fa-github-alt"></i></a>
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <h4>Our Bunker</h4>
+
+                <div class="hline-w"></div>
+                <p>
+                    Some Ave, 987,<br/>
+                    23890, New York,<br/>
+                    United States.<br/>
+                </p>
+            </div>
+
+        </div>
+        <! --/row -->
+    </div>
+    <! --/container -->
+</div><! --/footerwrap -->
