--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,26 @@
-<header>
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-        <div class="grid12">
-            <a class="logo">pierrebaron.fr</a>
-            <nav class="nav nav-menu">
-        	    <ul>
-        	    {% for link in site.navigation %}
-                    {% assign current = nil %}
-                    {% assign currentPage = page.url | remove: 'index.html' %}
-                        {% if currentPage == link.url or page.layout == link.layout %}
-                            {% assign current = 'active' %}
-                        {% endif %}
-                        <li class="{{current}}"><a href="{{ link.url }}">{{ link.text }}</a></li>
-                    {% endfor %}
-                </ul>
-            </nav>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{'/' | prepend : site.baseurl }}">pierrebaron</a>
         </div>
+        <div class="navbar-collapse collapse navbar-right">
+            <ul class="nav navbar-nav">
+                {% for link in site.navigation %}
+                {% assign current = nil %}
+                {% assign currentPage = page.url | remove: 'index.html' %}
+                {% if currentPage == link.url or page.layout == link.layout %}
+                {% assign current = 'active' %}
+                {% endif %}
+                <li class="{{current}}"><a href="{{ link.url }}">{{ link.text }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
     </div>
-</header>
+</div>
