--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,10 @@
 
 <body>
 {% include header.html %}
+{% include tagline.html %}
 
 <div class="container body">
     <div class="grid12">
-        <h1 class="title">{{ page.tagline }}</h1>
-
         {{ content }}
     </div>
 </div>
