--- a/_less/theme.less
+++ b/_less/theme.less
@@ -1,248 +1,467 @@
-// Flatly 3.1.1
-// Bootswatch
-// -----------------------------------------------------
+/*	################################################################
 
-@import url("//fonts.googleapis.com/css?family=Lato:400,700,400italic");
+	Author: Carlos Alvarez
+	URL: http://alvarez.is
 
-// Navbar =====================================================================
+	Project Name: SOLID - Bootstrap 3 Theme
+	Version: 1.0
+	URL: http://alvarez.is
 
+################################################################# */
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700,900);
+@import url(http://fonts.googleapis.com/css?family=Lato:400,900);
+
+/*	################################################################
+	1. GENERAL STRUCTURES
+################################################################# */
+* {
+    margin  : 0;
+    padding : 0px;
+}
+
+body {
+    background  : #fff;
+    margin      : 0;
+    height      : 100%;
+    color       : #384452;
+    font-family : 'Lato', sans-serif;
+    font-weight : 400;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family : 'Raleway', sans-serif;
+    font-weight : 700;
+}
+
+p {
+    padding       : 0;
+    margin-bottom : 12px;
+    font-family   : 'Lato', sans-serif;
+    font-weight   : 400;
+    font-size     : 14px;
+    line-height   : 24px;
+    color         : #384452;
+    margin-top    : 10px;
+}
+
+img {
+    height    : auto;
+    max-width : 100%;
+}
+
+a {
+    padding            : 0;
+    margin             : 0;
+    text-decoration    : none;
+    -webkit-transition : background-color .4s linear, color .4s linear;
+    -moz-transition    : background-color .4s linear, color .4s linear;
+    -o-transition      : background-color .4s linear, color .4s linear;
+    -ms-transition     : background-color .4s linear, color .4s linear;
+    transition         : background-color .4s linear, color .4s linear;
+}
+
+a:hover,
+a:focus {
+    text-decoration : none;
+    color           : #01b2fe;
+}
+
+::-moz-selection {
+    color       : #fff;
+    text-shadow : none;
+    background  : #2b2e31;
+}
+
+::selection {
+    color       : #fff;
+    text-shadow : none;
+    background  : #2b2e31;
+}
+
+.centered {
+    text-align : center
+}
+
+/*	################################################################
+	BOOTSTRAP MODIFICATIONS & TWEAKS
+################################################################# */
 .navbar {
-  border-width: 0;
-
-  &-default {
-
-    .badge {
-      background-color: #fff;
-      color: @navbar-default-bg;
-    }
-  }
-
-  &-inverse {
-
-    .badge {
-      background-color: #fff;
-      color: @navbar-inverse-bg;
-    }
-  }
-
-  &-brand {
-    padding: 18.5px 15px 20.5px;
-  }
+    min-height    : 70px;
+    padding-top   : 10px;
+    margin-bottom : 0px;
 }
 
-// Buttons ====================================================================
-
-.btn:active {
-  .box-shadow(none);
+.navbar-brand {
+    font-family : 'Raleway', sans-serif;
+    font-weight : 900;
 }
 
-.btn-group.open .dropdown-toggle {
-  .box-shadow(none);
+.navbar-header .navbar-brand {
+    color : white;
 }
 
-// Typography =================================================================
-
-.text-primary,
-.text-primary:hover {
-  color: @brand-primary;
+.navbar-default .navbar-nav > li > a {
+    color       : white;
+    font-weight : 700;
+    font-size   : 12px;
 }
 
-.text-success,
-.text-success:hover {
-  color: @brand-success;
+.navbar-default .navbar-nav > li > a:hover {
+    color : #00b3fe;
 }
 
-.text-danger,
-.text-danger:hover {
-  color: @brand-danger;
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color            : #00b3fe;
+    background-color : transparent;
 }
 
-.text-warning,
-.text-warning:hover {
-  color: @brand-warning;
+.navbar-default {
+    background-color : #384452;
+    border-color     : transparent;
 }
 
-.text-info,
-.text-info:hover {
-  color: @brand-info;
+.dropdown-menu {
+    background : #384452;
 }
 
-// Tables =====================================================================
-
-table,
-.table {
-
-  a {
-    text-decoration: underline;
-  }
-
-  .success,
-  .warning,
-  .danger,
-  .info {
-    color: #fff;
-
-    a {
-      color: #fff;
-    }
-  }
-
-  > thead > tr > th,
-  > tbody > tr > th,
-  > tfoot > tr > th,
-  > thead > tr > td,
-  > tbody > tr > td,
-  > tfoot > tr > td {
-    border: none;
-  }
-
-  &-bordered > thead > tr > th,
-  &-bordered > tbody > tr > th,
-  &-bordered > tfoot > tr > th,
-  &-bordered > thead > tr > td,
-  &-bordered > tbody > tr > td,
-  &-bordered > tfoot > tr > td {
-    border: 1px solid @table-border-color;
-  }
+.dropdown-menu > li > a {
+    color       : white;
+    font-weight : 700;
+    font-size   : 12px;
 }
 
-// Forms ======================================================================
-
-.form-control,
-input, {
-  border-width: 2px;
-  .box-shadow(none);
-
-  &:focus {
-    .box-shadow(none);
-  }
+.btn-theme {
+    color            : #fff;
+    background-color : #384452;
+    border-color     : #384452;
+    margin           : 4px;
 }
 
-.has-warning {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  .form-control-feedback {
-    color: @brand-warning;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 2px solid @brand-warning;
-  }
-
-  .input-group-addon {
-    border-color: @brand-warning;
-  }
+.btn-theme:hover,
+.btn-theme:focus,
+.btn-theme:active,
+.btn-theme.active,
+.open .dropdown-toggle.btn-theme {
+    color            : #fff;
+    background-color : #00b3fe;
+    border-color     : #00b3fe;
 }
 
-.has-error {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  .form-control-feedback {
-    color: @brand-danger;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 2px solid @brand-danger;
-  }
-
-  .input-group-addon {
-    border-color: @brand-danger;
-  }
+.dmbutton:hover,
+.dmbutton:active,
+.dmbutton:focus {
+    color            : #fff;
+    background-color : #222;
+    border-color     : #fff;
 }
 
-.has-success {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  .form-control-feedback {
-    color: @brand-success;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 2px solid @brand-success;
-  }
-
-  .input-group-addon {
-    border-color: @brand-success;
-  }
+.dmbutton {
+    background            : rgba(0, 0, 0, 0);
+    border                : 1px solid #fff;
+    color                 : #fff;
+    -webkit-border-radius : 2px;
+    border-radius         : 2px;
+    letter-spacing        : 0.85px;
+    padding               : 1.025rem 2.25rem 1.0875rem;
+    font-size             : 1.55rem;
+    cursor                : pointer;
+    font-weight           : normal;
+    line-height           : normal;
+    margin                : 0 0 1.25rem;
+    text-decoration       : none;
+    text-align            : center;
+    display               : inline-block;
+    -webkit-transition    : background-color 300ms ease-out;
+    -moz-transition       : background-color 300ms ease-out;
+    transition            : background-color 300ms ease-out;
+    -webkit-appearance    : none;
+    font-weight           : normal !important;
 }
 
-// Navs =======================================================================
-
-.nav {
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: transparent;
-  }
+.mtb {
+    margin-top    : 80px;
+    margin-bottom : 80px;
 }
 
-.pager {
-  a,
-  a:hover {
-    color: #fff;
-  }
-
-  .disabled {
-    &>a,
-    &>a:hover,
-    &>a:focus,
-    &>span {
-      background-color: @pagination-disabled-bg;
-    }
-  }
+.mb {
+    margin-bottom : 60px;
 }
 
-// Indicators =================================================================
-
-.alert {
-
-  a,
-  .alert-link {
-    color: #fff;
-    text-decoration: underline;
-  }
-
-  .close {
-    color: #fff;
-    text-decoration: none;
-    opacity: 0.4;
-
-    &:hover,
-    &:focus {
-      color: #fff;
-      opacity: 1;
-    }
-  }
+.mt {
+    margin-top : 60px;
 }
 
-// Progress bars ==============================================================
-
-.progress {
-  height: 10px;
-  .box-shadow(none);
-  .progress-bar {
-    font-size: 10px;
-    line-height: 10px;
-  }
+.hline {
+    border-bottom : 2px solid #384452;
 }
 
-// Containers =================================================================
+.hline-w {
+    border-bottom : 2px solid #fff;
+    margin-bottom : 25px;
+}
 
-.well {
-  .box-shadow(none);
+/*	################################################################
+	SITE WRAPS
+################################################################# */
+
+#headerwrap {
+    background-color : #00b3fe;
+    min-height       : 550px;
+    padding-top      : 100px;
+    padding-bottom   : 0px;
+    text-align       : center;
+}
+
+#headerwrap h3, h5 {
+    color       : white;
+    font-weight : 400;
+}
+
+#headerwrap h1 {
+    color         : white;
+    margin-bottom : 25px;
+}
+
+#headerwrap .img-responsive {
+    margin : 0 auto;
+}
+
+/* Services Wrap */
+#service {
+    margin-top    : 100px;
+    margin-bottom : 80px;
+}
+
+#service i {
+    color     : #00b3fe;
+    font-size : 60px;
+    padding   : 15px;
+}
+
+/* Portfolio Wrap */
+#portfoliowrap {
+    padding-top   : 60px;
+    margin-bottom : 60px;
+    display       : block;
+    text-align    : center
+}
+
+#portfoliowrap h3 {
+    margin-bottom : 25px;
+}
+
+.portfolio {
+    padding : 0 !important;
+    margin  : 0 !important;
+    display : block;
+}
+
+.portfolio-item .title:before {
+    border-radius : 0;
+    display       : none
+}
+
+.portfolio-item p {
+    margin : 0px 0 30px;
+}
+
+.portfolio-item h3 {
+    margin         : -10px 0 10px;
+    font-size      : 16px;
+    text-transform : uppercase;
+}
+
+.tpl6 h3 {
+    color          : #fff;
+    margin         : 0;
+    padding        : 40px 5px 0;
+    font-size      : 16px;
+    text-transform : uppercase;
+}
+
+.tpl6 .dmbutton {
+    display   : inline-block;
+    margin    : 30px 5px 20px 5px;
+    font-size : 13px;
+}
+
+.tpl6 .bg {
+    height           : 100%;
+    width            : 100%;
+    background-color : #00b3fe;
+    background-color : rgba(0, 179, 254, .9);
+    text-align       : center;
+}
+
+/* Testimonials Wrap */
+#twrap {
+    margin-top              : 0px;
+    padding-top             : 60px;
+    text-align              : center;
+    background              : url(../img/t-back.jpg) no-repeat relative center center;
+    min-height              : 450px;
+    width                   : 100%;
+
+    -webkit-background-size : 100%;
+    -moz-background-size    : 100%;
+    -o-background-size      : 100%;
+    background-size         : 100%;
+
+    -webkit-background-size : cover;
+    -moz-background-size    : cover;
+    -o-background-size      : cover;
+    background-size         : cover;
+}
+
+#twrap i {
+    font-size     : 50px;
+    color         : white;
+    margin-bottom : 25px;
+}
+
+#twrap p {
+    color       : white;
+    font-size   : 15px;
+    line-height : 30px;
+}
+
+/* clients logo */
+#cwrap {
+    background     : #f7f7f7;
+    margin-top     : 0px;
+    padding-top    : 80px;
+    padding-bottom : 100px;
+}
+
+#cwrap h3 {
+    margin-bottom : 60px;
+}
+
+/* Footer */
+#footerwrap {
+    padding-top    : 60px;
+    padding-bottom : 60px;
+    background     : #384452;
+}
+
+#footerwrap p {
+    color : #bfc9d3;
+}
+
+#footerwrap h4 {
+    color : white;
+}
+
+#footerwrap i {
+    font-size     : 30px;
+    color         : #bfc9d3;
+    padding-right : 25px;
+}
+
+#footerwrap i:hover {
+    color : #00b3fe
+}
+
+/*	################################################################
+	PAGE CONFIGURATIONS
+################################################################# */
+/* General Tweaks */
+
+#blue {
+    background     : #00b3fe;
+    margin-top     : 60px;
+    margin-bottom  : 60px;
+    padding-top    : 25px;
+    padding-bottom : 25px;
+}
+
+#blue h3 {
+    color       : white;
+    margin-left : 15px;
+}
+
+.ctitle {
+    color         : #00b3fe;
+    font-weight   : 700;
+    margin-bottom : 15px;
+}
+
+csmall {
+    font-size : 12px;
+    color     : #b3b3b3;
+}
+
+csmall2 {
+    font-size : 12px;
+    color     : #f39c12
+}
+
+.spacing {
+    margin-top    : 40px;
+    margin-bottom : 40px;
+}
+
+.badge-theme {
+    background : #00b3fe;
+}
+
+/* Contact Page */
+#contactwrap {
+    margin-top              : -60px;
+    padding-top             : 0px;
+    text-align              : center;
+    background              : url(../img/contact.jpg) no-repeat relative center center;
+    min-height              : 400px;
+    width                   : 100%;
+
+    -webkit-background-size : 100%;
+    -moz-background-size    : 100%;
+    -o-background-size      : 100%;
+    background-size         : 100%;
+
+    -webkit-background-size : cover;
+    -moz-background-size    : cover;
+    -o-background-size      : cover;
+    background-size         : cover;
+}
+
+/* Blog Page */
+.popular-posts {
+    margin       : 0px;
+    padding-left : 0px;
+}
+
+.popular-posts li {
+    list-style    : none;
+    margin-bottom : 20px;
+    min-height    : 70px;
+}
+
+.popular-posts li a,
+.popular-posts li a:hover {
+    color           : #2f2f2f;
+    text-decoration : none;
+}
+
+.popular-posts li img {
+    float        : left;
+    margin-right : 20px;
+}
+
+.popular-posts li em {
+    font-family : 'Lato', sans-serif;
+    font-size   : 12px;
+    color       : #b3b3b3
+}
+
+.popular-posts p {
+    line-height   : normal;
+    margin-bottom : auto;
+}
+
+.share i {
+    padding-right : 15px;
+    font-size     : 18px;
 }
